package Creational.Prototype.Interface;

public interface Prototype {
    Prototype clone();   
}
